<resources>
    <string name="app_name">MDSYandexProject</string>
    <string name="logo_image_for_stock">Logo image for stock</string>
    <string name="image_for_favourite_button">Image for favourite button</string>
    <string name="stocks">Stocks</string>
    <string name="favourite">Favourite</string>
    <string name="hint_for_search_edit_text">Find company or ticker</string>
    <string name="popular_requests_header">Popular requests</string>
    <string name="search_history_header">You’ve searched for this</string>
    <string name="right_icon_for_search">Right icon for search</string>
    <string name="left_icon_for_search">Left icon for search</string>
    <string name="show_more">Show more</string>
    <string name="current_price">%1$s %2$s</string>
    <string name="day_delta_price">%1$s%2$s (%3$s%%)</string>
    <string name="loading_price_image">loading price image</string>
    <string name="error_price_image">error_price_message</string>
    <string name="error_message">ErrorCode: %1$s; errorMessage: %2$s</string>
    <string name="connected">Your internet connection is fine</string>
    <string name="lost_connection">Your internet connection is unavailable</string>
    <string name="try_again">Try again</string>
    <string name="one_day_candles">D</string>
    <string name="one_week_candles">W</string>
    <string name="one_month_candles">M</string>
    <string name="six_month_candles">6M</string>
    <string name="one_year_candles">1Y</string>
    <string name="all_candles">ALL</string>
    <string name="chart_loading">Chart is loading, please wait</string>
    <string name="image_for_news_logo">Image for news logo</string>
    <string name="company_name">Name:</string>
    <string name="country">HQ country:</string>
    <string name="currency">Currency:</string>
    <string name="exchange">Exchange:</string>
    <string name="ipo">IPO date:</string>
    <string name="market_capitalization">Market capitalization:</string>
    <string name="phone">Phone:</string>
    <string name="weburl">Weburl:</string>
    <string name="url_style"><u>%1$s</u></string>
    <string name="btn_for_previous_months_data">btn for previous months data</string>
    <string name="btn_for_next_months_data">btn for next months data</string>
    <string name="chart_tab_name">Chart</string>
    <string name="news_tab_name">News</string>
    <string name="summary_tab_name">Summary</string>
    <string name="recommendations_tab_name">Recommendations</string>
    <string name="permission_denied_error">Permission denied</string>
    <string name="limit_exceeded_error">Your limit exceeded</string>
    <string name="common_error">Something goes wrong</string>
    <string name="chart_period_info_message">This period is available only in premium account</string>
    <string name="loading_data_message">Data is loading please wait…</string>
    <string name="loading_data_percentage">%1$d%%</string>
</resources>