<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="stockItem"
            type="com.sample.mdsyandexproject.domain.StockItem" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/stock_logo"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:layout_gravity="center"
            android:contentDescription="@string/logo_image_for_stock"
            app:imageUrl="@{stockItem.logoUrl}"
            tools:src="@drawable/ic_yandex_stab" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/company_name"
                style="@style/H2_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_name" />

            <TextView
                android:id="@+id/company_name_value"
                style="@style/H3_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{stockItem.companyName}" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/country"
                style="@style/H2_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country" />

            <TextView
                android:id="@+id/country_value"
                style="@style/H3_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{stockItem.country}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/currency"
                style="@style/H2_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency" />

            <TextView
                android:id="@+id/currency_value"
                style="@style/H3_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{stockItem.currency}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/exchange"
                style="@style/H2_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exchange" />

            <TextView
                android:id="@+id/exchange_value"
                style="@style/H3_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{stockItem.exchange}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ipo"
                style="@style/H2_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ipo" />

            <TextView
                android:id="@+id/ipo_value"
                style="@style/H3_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{stockItem.ipo}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/market_capitalization"
                style="@style/H2_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/market_capitalization" />

            <TextView
                android:id="@+id/market_capitalization_value"
                style="@style/H3_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{stockItem.marketCapitalization}" />
        </LinearLayout>

        <!--        <LinearLayout-->
        <!--            android:id="@+id/phone"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="16dp"-->
        <!--            android:layout_marginTop="16dp"-->
        <!--            android:layout_marginEnd="16dp"-->
        <!--            android:gravity="center_vertical"-->
        <!--            android:orientation="horizontal">-->

        <!--            <TextView-->
        <!--                style="@style/H2_text_style"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:text="@string/phone" />-->

        <!--            <TextView-->
        <!--                android:id="@+id/phone_value"-->
        <!--                style="@style/H3_text_style"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginStart="8dp"-->
        <!--                android:text="@{stockItem.phone}" />-->
        <!--        </LinearLayout>-->


        <LinearLayout
            android:id="@+id/weburl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/H2_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weburl" />

            <TextView
                android:id="@+id/weburl_value"
                style="@style/H3_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:linksClickable="true"
                android:textColor="@color/blue"
                android:text="@{stockItem.weburl}" />
        </LinearLayout>


    </LinearLayout>
</layout>