<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="searchViewModel"
            type="com.sample.mdsyandexproject.search.SearchViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/search_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:elevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/list_horizontal_margin"
                android:layout_marginTop="@dimen/list_vertical_margin"
                android:layout_marginEnd="@dimen/list_horizontal_margin"
                android:layout_marginBottom="16dp"
                android:background="@drawable/search_bar_shape"
                android:orientation="horizontal">

                <!-- TODO: как-то надо убрать подчеркивание текста  -->

                <ImageView
                    android:id="@+id/left_drawable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/right_icon_for_search"
                    android:src="@drawable/ic_back_arrow" />

                <EditText
                    android:id="@+id/search_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="13dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="15"
                    android:background="@null"
                    android:focusedByDefault="true"
                    android:hint="@string/hint_for_search_edit_text"
                    android:importantForAutofill="no"
                    android:inputType="textNoSuggestions" />

                <ImageView
                    android:id="@+id/right_search_drawable"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/left_icon_for_search"
                    android:src="@drawable/ic_clear"
                    android:visibility="gone" />
            </LinearLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <include
            android:id="@+id/search_suggest_view"
            layout="@layout/search_suggest_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp" />

        <LinearLayout
            android:id="@+id/search_result_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp">

                <TextView
                    style="@style/H2_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/stocks" />

<!--                <TextView-->
<!--                    style="@style/body"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="end|center_vertical"-->
<!--                    android:text="@string/show_more" />-->
            </FrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_result_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/list_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/list_horizontal_margin"
                tools:itemCount="16"
                tools:listitem="@layout/stock_list_item_dark" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/rv_pb"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:visibility="gone"
            app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>